// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNavigation renders correctly with buttons disabled 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="page-navigation"
>
    <button
        disabled={true}
        name="prev"
        onClick={[Function]}
    >
        Prev
    </button>
    <button
        disabled={true}
        name="next"
        onClick={[Function]}
    >
        Next
    </button>
</div>,
  "nodes": Array [
    <div
      className="page-navigation"
>
      <button
            disabled={true}
            name="prev"
            onClick={[Function]}
      >
            Prev
      </button>
      <button
            disabled={true}
            name="next"
            onClick={[Function]}
      >
            Next
      </button>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PageNavigation
        nextEnabled={false}
        onNext={[Function]}
        onPrev={[Function]}
        prevEnabled={false}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "nextEnabled": false,
          "onNext": [Function],
          "onPrev": [Function],
          "prevEnabled": false,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="page-navigation"
>
          <button
                    disabled={true}
                    name="prev"
                    onClick={[Function]}
          >
                    Prev
          </button>
          <button
                    disabled={true}
                    name="next"
                    onClick={[Function]}
          >
                    Next
          </button>
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="page-navigation"
>
          <button
                    disabled={true}
                    name="prev"
                    onClick={[Function]}
          >
                    Prev
          </button>
          <button
                    disabled={true}
                    name="next"
                    onClick={[Function]}
          >
                    Next
          </button>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PageNavigation
    nextEnabled={false}
    onNext={[Function]}
    onPrev={[Function]}
    prevEnabled={false}
/>,
}
`;

exports[`PageNavigation renders correctly with default props 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="page-navigation"
>
    <button
        disabled={false}
        name="prev"
        onClick={[Function]}
    >
        Prev
    </button>
    <button
        disabled={false}
        name="next"
        onClick={[Function]}
    >
        Next
    </button>
</div>,
  "nodes": Array [
    <div
      className="page-navigation"
>
      <button
            disabled={false}
            name="prev"
            onClick={[Function]}
      >
            Prev
      </button>
      <button
            disabled={false}
            name="next"
            onClick={[Function]}
      >
            Next
      </button>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PageNavigation
        nextEnabled={true}
        onNext={[Function]}
        onPrev={[Function]}
        prevEnabled={true}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "nextEnabled": true,
          "onNext": [Function],
          "onPrev": [Function],
          "prevEnabled": true,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="page-navigation"
>
          <button
                    disabled={false}
                    name="prev"
                    onClick={[Function]}
          >
                    Prev
          </button>
          <button
                    disabled={false}
                    name="next"
                    onClick={[Function]}
          >
                    Next
          </button>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="page-navigation"
>
          <button
                    disabled={false}
                    name="prev"
                    onClick={[Function]}
          >
                    Prev
          </button>
          <button
                    disabled={false}
                    name="next"
                    onClick={[Function]}
          >
                    Next
          </button>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PageNavigation
    nextEnabled={true}
    onNext={[Function]}
    onPrev={[Function]}
    prevEnabled={true}
/>,
}
`;
